<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrapsGame</string>
    <string name="welcome">Welcome, Craps Challenger!</string>
    <string name="select_size">select die size:</string>
    <string name="start">Begin Challenge</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="game">GAME | </string>
    <string name="rolls">ROLLS | </string>
    <string name="wins">WINS | </string>
    <string name="losses">LOSSES | </string>
    <string name="replay_title">Play Again</string>
    <string name="replay_msg">Would you like to play again?</string>
    <string name="sure">Sure</string>
    <string name="no_thanks">No, thanks</string>
    <string name="reset">Reset</string>
    <string name="save_title">Save Game</string>
    <string name="save_msg">Would you like to save your game stats?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="summary">Player Summary:</string>
    

</resources>
