<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crapsMainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/welcome"
        android:textSize="@dimen/begin_title_size" />

    <LinearLayout
        android:id="@+id/gameOptionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/selectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/select_size"
            android:textSize="@dimen/status_size"
            android:textStyle="italic" />

        <RadioGroup
            android:id="@+id/dieSizeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/smallRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:text="@string/small"
                android:textSize="@dimen/status_size" />

            <RadioButton
                android:id="@+id/largeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large"
                android:textSize="@dimen/status_size" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gamePlayLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/die1ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:padding="5dp"
            android:src="@drawable/abc_ic_commit_search_api_holo_light" />

        <ImageView
            android:id="@+id/die2ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:padding="5dp"
            android:src="@drawable/abc_ic_commit_search_api_holo_light" />

        <TextView
            android:id="@+id/rollValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/start" />

    <LinearLayout
        android:id="@+id/gameProgressLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gameStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/result_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/rollPointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/point_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/gameEndStatusLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="horizontal" >

        <TableLayout
            android:id="@+id/gameStatsTableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_vertical|bottom" >

            <TextView
                android:id="@+id/playerNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingEnd="5dp" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:layout_margin="3dp">

                <TextView
                    android:id="@+id/numOfGamesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/game"
                    android:textSize="@dimen/status_size"
            		android:textStyle="italic"  />

                <TextView
                    android:id="@+id/numOfGamesValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/status_size"
           			android:textStyle="italic" 
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:background="@color/background_color"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp">

                <TextView
                    android:id="@+id/numOfRollsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/rolls"
                    android:textSize="@dimen/status_size"
            		android:textStyle="italic"  />

                <TextView
                    android:id="@+id/numOfRollsValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" 
                    android:textSize="@dimen/status_size"
            		android:textStyle="italic" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp" >

                <TextView
                    android:id="@+id/numOfWinsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/wins"
                    android:textSize="@dimen/status_size"
            		android:textStyle="italic"  />

                <TextView
                    android:id="@+id/numOfWinsValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" 
                    android:textSize="@dimen/status_size"
            		android:textStyle="italic" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp" >

                <TextView
                    android:id="@+id/numOfLossesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/losses"
                    android:textSize="@dimen/status_size"
            		android:textStyle="italic"  />

                <TextView
                    android:id="@+id/numOfLossesValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/status_size"
            		android:textStyle="italic"
                    android:gravity="right" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</LinearLayout>